<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorConcept"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:id="@+id/tv_service_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_service_top"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_service_add_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/src_drop_shadow" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_service_product_name"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_product_name_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_service_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClick"
                    android:text="@string/tv_service_search"
                    android:textColor="@color/colorTextServiceBtn"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_product_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_price"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_price_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_main_home_service_fee_won"
                    android:textColor="@color/colorTextServiceNotPut"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_price_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_last"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_last_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_last_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_while"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_while"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_while_tool"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_service_while_month"
                    android:textColor="@color/colorTextServiceNotPut"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_while_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_add_image"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/src_service_add_image"
                    android:onClick="onClick"
                    android:src="@android:drawable/ic_input_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:onClick="onClick"
                    android:text="@string/tv_service_add_image_btn"
                    android:textColor="@color/colorTextServiceBtn"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_alarm"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_alarm_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_service_alarm_day"
                    android:textColor="@color/colorTextServiceNotPut"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_alarm_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_extra"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_extra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_extra_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_extra_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_change_plan"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_change_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_change_plan_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_change_plan_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:text="@string/tv_service_cancel_plan"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_service_add_cancel_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_service_cancel_plan_hint"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextServiceNotPut"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_service_cancel_plan_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <TextView
                android:id="@+id/tv_service_add_remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginBottom="37dp"
                android:gravity="right"
                android:onClick="onClick"
                android:text="@string/tv_service_remove"
                android:textColor="@color/colorTextServiceRemove"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <TextView
            android:id="@+id/tv_service_add_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTextServiceAdd"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/tv_service_add"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/linear_service_add_remove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:weightSum="7">

            <TextView
                android:id="@+id/tv_service_add_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/colorTextServiceRemoveCancelBack"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_service_remove_cancel"
                android:textColor="@color/colorTextServiceRemoveCancel"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_service_add_btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/colorTextServiceRemoveRemoveBack"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_service_remove_remove"
                android:textColor="@color/colorTextServiceRemoveRemove"
                android:textSize="18sp" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>