<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/src_dialog_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/src_dialog_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dialog_login"
                android:textColor="@color/colorConcept"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:text="@string/tv_dialog_login_please"
                android:textAlignment="center"
                android:textColor="@color/colorTextDialogLoginPlease"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_login_later"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/src_dialog_login_bottom_left"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_dialog_login_later"
                android:textColor="@color/colorTextDialogLoginPlease"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_dialog_login_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/src_dialog_login_bottom_right"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/tv_dialog_login_now"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>