<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorConcept"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:id="@+id/tv_product_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tv_product_top"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_product_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/src_drop_shadow" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_product_service_name"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_product_service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/tv_product_service_name_hint"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextServiceNotPut"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_product_service_name_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

            <EditText
                android:id="@+id/edt_product_membership"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:hint="@string/tv_product_membership_hint"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextServiceNotPut"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_product_membership_under"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/src_service_add_under_bar" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_product_complete"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorTextServiceAdd"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/tv_product_complete"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>